--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,27 @@
 body {
   margin: 0;
- 
 }
 
+.footer {
+  display: flex;
+  flex-direction: row;
+  position: static;
+  bottom: 0%;
+  left: 0%;
+  height: 15rem;
+  width: 100%;
+  background-color: black;
+}
+
+.main-header {
+  display: flex;
+  flex-direction: row;
+  position: static;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 3rem;
+  background-color: aqua;
+}
+
+/*# sourceMappingURL=index.css.map */
