--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,17 +2,6 @@ body {
   margin: 0;
 }
 
-.footer {
-  display: flex;
-  flex-direction: row;
-  position: static;
-  bottom: 0%;
-  left: 0%;
-  height: 15rem;
-  width: 100%;
-  background-color: black;
-}
-
 .main-header {
   display: flex;
   flex-direction: row;
@@ -22,6 +11,31 @@ body {
   width: 100%;
   height: 3rem;
   background-color: aqua;
+}
+
+.main-banner {
+  width: 100%;
+  height: 20rem;
+  background-color: rgb(244, 255, 127);
+}
+
+.sectional {
+  display: block;
+  margin: auto;
+  width: 90%;
+  height: 1.88rem;
+  background-color: red;
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  position: static;
+  bottom: 0%;
+  left: 0%;
+  width: 100%;
+  height: 15rem;
+  background-color: black;
 }
 
 /*# sourceMappingURL=index.css.map */
