--- a/client/src/sass/layout/_Header.scss
+++ b/client/src/sass/layout/_Header.scss
@@ -1,10 +1,9 @@
+@use'../abstracts/mixins';
+
 .main-header{
     display: flex;
     flex-direction: row;
-    position:static;
-    top:0%;
-    left:0%;
-    width:100%;
-    height: 3rem;
+    @include mixins.header-position(static,0%,0%);
+    @include mixins.size(100%,3rem);
     background-color: aqua;
 }
