--- a/client/src/sass/layout/_Banner.scss
+++ b/client/src/sass/layout/_Banner.scss
@@ -2,5 +2,5 @@
 
 .main-banner{
     @include mixins.size(100%,20rem);
-    background-color: rgb(244, 255, 127);
+    background-image: url('https://i.imgur.com/MLZiFDt.jpg');
 }
