--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,15 +16,15 @@ body {
 .main-banner {
   width: 100%;
   height: 20rem;
-  background-color: rgb(244, 255, 127);
+  background-image: url("https://i.imgur.com/MLZiFDt.jpg");
 }
 
 .sectional {
   display: block;
   margin: auto;
+  background-color: red;
   width: 90%;
   height: 1.88rem;
-  background-color: red;
 }
 
 .footer {
