--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -9,6 +9,7 @@
 @use'layout/Layout';
 @use'layout/Header';
 @use'layout/Banner';
+@use'layout/home';
 @use'layout/sectional';
 @use'layout/Footer';
 @use'layout/Nav';
