--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,12 +10,19 @@ body {
   left: 0%;
   width: 100%;
   height: 3rem;
-  background-color: aqua;
+  background-color: #d7c26f;
 }
 
 .main-banner {
   width: 100%;
   height: 20rem;
+}
+.main-banner .banner-img {
+  width: 100%;
+  height: 100%;
+}
+
+.home-banner {
   background-image: url("https://i.imgur.com/MLZiFDt.jpg");
 }
 
