crearted new compoenent "Featured.js"

--- a/client/src/sass/layout/_home.scss
+++ b/client/src/sass/layout/_home.scss
@@ -1,4 +1,4 @@
-.home-banner{
-  background-image: url('https://i.imgur.com/MLZiFDt.jpg');
+// .home-banner{
+//   background-image: url('https://i.imgur.com/MLZiFDt.jpg');
   
-}
+// }
