--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -9,9 +9,8 @@
 @use'layout/Layout';
 @use'layout/Header';
 @use'layout/Banner';
-@use'layout/home';
 @use'layout/sectional';
+@use'layout/featured';
 @use'layout/Footer';
 @use'layout/Nav';
 
-// @use'images/banner.jpg';
