--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,8 +26,17 @@ body {
   display: block;
   margin: auto;
   background-color: red;
-  width: 90%;
+  width: 100%;
   height: 1.88rem;
+}
+
+.featured-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  height: 18.75rem;
+  background-color: blue;
 }
 
 .footer {
