added the default width and height of the flexbox items into variables

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -11,6 +11,7 @@
 @use'layout/Banner';
 @use'layout/sectional';
 @use'layout/featured';
+@use'layout/upcoming';
 @use'layout/Footer';
 @use'layout/Nav';
 
