--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,10 +37,41 @@ body {
 .featured-container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
   height: 18.75rem;
   background-color: blue;
+}
+.featured-container .featured__jewelry {
+  width: 15.5rem;
+  height: 15.5rem;
+  background-color: darkmagenta;
+}
+.featured-container .featured__paintings {
+  width: 15.5rem;
+  height: 15.5rem;
+  background-color: aquamarine;
+}
+.featured-container .featured__sculptures {
+  width: 15.5rem;
+  height: 15.5rem;
+  background-color: darkorange;
+}
+
+.upcoming-auctions {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 20rem;
+  background-color: darkgray;
+}
+.upcoming-auctions .upcoming__date {
+  width: 23.75rem;
+  height: 15.5rem;
+  background-color: antiquewhite;
 }
 
 .footer {
