--- a/client/src/sass/layout/_featured.scss
+++ b/client/src/sass/layout/_featured.scss
@@ -1,11 +1,29 @@
 @use'../abstracts/mixins';
+@use'../abstracts/variables';
 
 
 .featured-container{
    display: flex;
    flex-direction: row;
-   justify-content: center;
+   justify-content: space-between;
+   align-items: center;
    @include mixins.size(100%,18.75rem);
    background-color: blue;
    
+   .featured{
+      &__jewelry{
+         @include mixins.size(variables.$def-item-wth, variables.$def-item-ht);
+         background-color: darkmagenta;
+      }
+
+      &__paintings{
+         @include mixins.size(variables.$def-item-wth, variables.$def-item-ht);
+         background-color: aquamarine;
+      }
+
+      &__sculptures{
+         @include mixins.size(variables.$def-item-wth, variables.$def-item-ht);
+         background-color: darkorange;
+      }
+   }
 }
