--- a/client/src/sass/layout/_Footer.scss
+++ b/client/src/sass/layout/_Footer.scss
@@ -5,5 +5,5 @@
     flex-direction: row;
     @include mixins.footer-position(static,0%,0%);
     @include mixins.size(100%, 15rem);
-    background-color: black;
+    background-color: #d7c26f;
 }
