--- a/client/src/sass/layout/_featured.scss
+++ b/client/src/sass/layout/_featured.scss
@@ -8,7 +8,7 @@
    justify-content: space-between;
    align-items: center;
    @include mixins.size(100%,18.75rem);
-   background-color: blue;
+   background-color: white;
    
    .featured{
       &__jewelry{
