added images of paintings to featured-container items

--- a/client/src/sass/layout/_featured.scss
+++ b/client/src/sass/layout/_featured.scss
@@ -25,5 +25,9 @@
          @include mixins.size(variables.$def-item-wth, variables.$def-item-ht);
          background-color: darkorange;
       }
+
+      &__img{
+         @include mixins.size(variables.$def-item-wth, variables.$def-item-ht);
+      }
    }
 }
