--- a/client/src/index.css
+++ b/client/src/index.css
@@ -58,6 +58,10 @@ body {
   height: 15.5rem;
   background-color: darkorange;
 }
+.featured-container .featured__img {
+  width: 15.5rem;
+  height: 15.5rem;
+}
 
 .upcoming-auctions {
   display: flex;
