--- a/client/src/sass/abstracts/_variables.scss
+++ b/client/src/sass/abstracts/_variables.scss
@@ -1,6 +1,8 @@
 //font colors
 $header: #d7c26f;
 
+//box-shadow
+$def-box-shadow:10px 3px 15px #000000;
 //flexbox item variables
 $def-item-wth:15.50rem;
 $def-item-ht:15.50rem;
