added the @extend class .featured-details

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,20 +43,20 @@ body {
   height: 18.75rem;
   background-color: white;
 }
+.featured-container .featured-details, .featured-container .featured__sculptures, .featured-container .featured__paintings, .featured-container .featured__jewelry {
+  box-shadow: 10px 3px 15px #000000;
+}
 .featured-container .featured__jewelry {
   width: 15.5rem;
   height: 15.5rem;
-  box-shadow: 10px 3px 15px #000000;
 }
 .featured-container .featured__paintings {
   width: 15.5rem;
   height: 15.5rem;
-  box-shadow: 10px 3px 15px #000000;
 }
 .featured-container .featured__sculptures {
   width: 15.5rem;
   height: 15.5rem;
-  box-shadow: 10px 3px 15px #000000;
 }
 .featured-container .featured__img {
   width: 15.5rem;
