--- a/client/src/sass/layout/_sectional.scss
+++ b/client/src/sass/layout/_sectional.scss
@@ -3,7 +3,7 @@
 .sectional{
     display:block;
     margin:auto;
-    background-color: #d7c26f;
+    background-color: #7e7a7a;
     // background-color: rgba(228, 228, 228, 0.942);
     @include mixins.size(100%,1.88rem);
     
