--- a/client/src/sass/abstracts/_variables.scss
+++ b/client/src/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
-//font colors
-$header: #d7c26f;
-
+// colors
+$header: #000000;
+$footer: #000000;
 //box-shadow
 $def-box-shadow:10px 3px 15px #000000;
 //flexbox item variables
