--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,9 +29,9 @@ body {
 .sectional {
   display: block;
   margin: auto;
-  background-color: #7e7a7a;
+  background-color: #201f1f;
   width: 100%;
-  height: 1.88rem;
+  height: 1rem;
 }
 
 .featured-container {
@@ -41,7 +41,7 @@ body {
   align-items: center;
   width: 100%;
   height: 18.75rem;
-  background-color: white;
+  background-color: rgb(235, 235, 235);
 }
 .featured-container .featured-details, .featured-container .featured__sculptures, .featured-container .featured__paintings, .featured-container .featured__jewelry {
   box-shadow: 10px 3px 15px #000000;
@@ -65,11 +65,10 @@ body {
 
 .exhibition-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  height: 30rem;
   background-color: white;
 }
 .exhibition-container .exhibition__img_wrapper {
@@ -77,8 +76,16 @@ body {
   height: 100%;
 }
 .exhibition-container .exhibition__img {
-  width: 100%;
-  height: 100%;
+  display: inline-block;
+  width: 30%;
+  height: 15rem;
+}
+.exhibition-container .exhibition__description {
+  display: inline-block;
+  vertical-align: top;
+}
+.exhibition-container .exhibition__description .exhibition__title {
+  margin: 0;
 }
 
 .footer {
