--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -11,7 +11,7 @@
 @use'layout/Banner';
 @use'layout/sectional';
 @use'layout/featured';
-@use'layout/upcoming';
+@use'layout/exhibitions';
 @use'layout/Footer';
 @use'layout/Nav';
 
