--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poiret+One&display=swap");
 * {
   box-sizing: border-box;
 }
@@ -79,7 +80,7 @@ body {
 .exhibition-container .exhibition__img {
   display: inline-block;
   width: 30%;
-  height: 15rem;
+  height: 12.5rem;
 }
 .exhibition-container .exhibition__description {
   display: inline-block;
@@ -87,9 +88,14 @@ body {
 }
 .exhibition-container .exhibition__description .exhibition__title {
   margin: 0;
+  text-align: center;
+  font-family: "Poiret One", cursive;
 }
 .exhibition-container .exhibition__description .exhibition__paragraph {
   width: 30rem;
+  margin-top: 0%;
+  margin-left: 5%;
+  font-family: "Poiret One", cursive;
 }
 
 .footer {
