--- a/client/src/index.css
+++ b/client/src/index.css
@@ -97,6 +97,17 @@ body {
   margin-left: 5%;
   font-family: "Poiret One", cursive;
 }
+@media (max-width: 46.88rem) {
+  .exhibition-container .exhibition__img {
+    width: 100%;
+    height: 25.5rem;
+  }
+  .exhibition-container .exhibition__paragraph {
+    width: 18rem;
+    margin-left: 0%;
+    margin-bottom: 0%;
+  }
+}
 
 .footer {
   display: flex;
