--- a/client/src/index.css
+++ b/client/src/index.css
@@ -71,7 +71,7 @@ body {
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  background-color: white;
+  background-color: #ffffff;
 }
 .exhibition-container .exhibition__img_wrapper {
   width: 100%;
@@ -93,19 +93,25 @@ body {
 }
 .exhibition-container .exhibition__description .exhibition__paragraph {
   width: 30rem;
-  margin-top: 0%;
+  margin-top: 2%;
   margin-left: 5%;
   font-family: "Poiret One", cursive;
 }
 @media (max-width: 46.88rem) {
+  .exhibition-container .exhibition-container {
+    width: 100vw;
+  }
   .exhibition-container .exhibition__img {
     width: 100%;
     height: 25.5rem;
   }
-  .exhibition-container .exhibition__paragraph {
+  .exhibition-container .exhibition__img_wrapper {
+    overflow: hidden;
+  }
+}
+@media (max-width: 46.88rem) {
+  .exhibition-container .exhibition__description {
     width: 18rem;
-    margin-left: 0%;
-    margin-bottom: 0%;
   }
 }
 
