--- a/client/src/index.css
+++ b/client/src/index.css
@@ -55,12 +55,25 @@ body {
   width: 15.5rem;
   height: 15.5rem;
 }
+@media (max-width: 46.88rem) {
+  .featured-container .featured-details, .featured-container .featured__paintings {
+    box-shadow: none;
+  }
+  .featured-container .featured__paintings {
+    width: 85%;
+    height: 15.5rem;
+  }
+  .featured-container .featured__img {
+    width: 100%;
+    height: 15.5rem;
+  }
+}
 
 @media (max-width: 46.88rem) {
   .featured-container {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 25rem;
     height: 100%;
   }
 }
