--- a/client/src/index.css
+++ b/client/src/index.css
@@ -116,10 +116,6 @@ body {
   .exhibition-container .exhibition-container {
     width: 100vw;
   }
-  .exhibition-container .exhibition__img {
-    width: 100%;
-    height: 25.5rem;
-  }
   .exhibition-container .exhibition__img_wrapper {
     overflow: hidden;
   }
@@ -127,6 +123,12 @@ body {
 @media (max-width: 46.88rem) {
   .exhibition-container .exhibition__description {
     width: 18rem;
+  }
+}
+@media (max-width: 23.44rem) {
+  .exhibition-container .exhibition__img {
+    width: 98%;
+    height: 15.5rem;
   }
 }
 
