--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poiret+One&display=swap");
 * {
   box-sizing: border-box;
@@ -16,6 +17,12 @@ body {
   width: 100%;
   height: 2.5rem;
   background-color: #000000;
+}
+.main-header .main-header__title {
+  color: #ffffff;
+  margin-top: -0.31rem;
+  margin-left: 1.5%;
+  font-family: "Monoton", cursive;
 }
 
 .main-banner {
@@ -134,7 +141,7 @@ body {
 @media (max-width: 23.44rem) {
   .exhibition-container .exhibition__img {
     width: 98.5%;
-    height: 15.5rem;
+    height: 17.5rem;
   }
 }
 
