--- a/client/src/sass/base/_typeography.scss
+++ b/client/src/sass/base/_typeography.scss
@@ -1,1 +1,2 @@
+@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
