--- a/client/src/sass/layout/_Header.scss
+++ b/client/src/sass/layout/_Header.scss
@@ -7,4 +7,13 @@
     @include mixins.header-position(static,0%,0%);
     @include mixins.size(100%,2.5rem);
     background-color: variables.$header;
+
+   .main-header__title{
+     color:#ffffff;
+     margin: {
+        top: -0.31rem;
+        left:1.5%
+     }
+     font-family: variables.$title-font;
+   }
 }
