--- a/client/src/index.css
+++ b/client/src/index.css
@@ -156,4 +156,15 @@ body {
   background-color: #000000;
 }
 
+.nav-list {
+  position: relative;
+  right: -20%;
+}
+.nav-list .nav__item {
+  display: inline-block;
+  color: #ffffff;
+  list-style: none;
+  padding-left: 30px;
+}
+
 /*# sourceMappingURL=index.css.map */
