--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,7 +39,13 @@ body {
   margin: auto;
   background-color: #201f1f;
   width: 100%;
-  height: 1rem;
+  height: 1.5rem;
+}
+
+.section-title {
+  width: 20%;
+  margin: 0 auto;
+  color: #ffffff;
 }
 
 .featured-container {
