--- a/client/src/index.css
+++ b/client/src/index.css
@@ -171,6 +171,7 @@ body {
   color: #ffffff;
   list-style: none;
   padding-left: 30px;
+  font-family: "Poiret One", cursive;
 }
 
 /*# sourceMappingURL=index.css.map */
