--- a/client/src/index.css
+++ b/client/src/index.css
@@ -173,5 +173,13 @@ body {
   padding-left: 30px;
   font-family: "Poiret One", cursive;
 }
+.nav-list .nav__item .activeStyling {
+  color: #a2a2a2;
+  text-decoration: underline;
+}
+.nav-list .nav__item > a {
+  color: #ffffff;
+  text-decoration: none;
+}
 
 /*# sourceMappingURL=index.css.map */
