added flex-box items to Art component

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -8,10 +8,11 @@
 
 @use'layout/Layout';
 @use'layout/Header';
+@use'layout/Nav';
 @use'layout/Banner';
+@use'layout/Art';
 @use'layout/sectional';
 @use'layout/featured';
 @use'layout/exhibitions';
 @use'layout/Footer';
-@use'layout/Nav';
 
