--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,6 +25,26 @@ body {
   font-family: "Monoton", cursive;
 }
 
+.nav-list {
+  position: relative;
+  right: -20%;
+}
+.nav-list .nav__item {
+  display: inline-block;
+  color: #ffffff;
+  list-style: none;
+  padding-left: 30px;
+  font-family: "Poiret One", cursive;
+}
+.nav-list .nav__item .activeStyling {
+  color: #a2a2a2;
+  text-decoration: underline;
+}
+.nav-list .nav__item > a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
 .main-banner {
   width: 100%;
   height: 27rem;
@@ -32,6 +52,19 @@ body {
 .main-banner .banner-img {
   width: 100%;
   height: 100%;
+}
+
+.art-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  height: 17.75rem;
+}
+.art-container .art__item {
+  width: 15.25rem;
+  height: 16rem;
+  background-color: red;
 }
 
 .sectional {
@@ -160,26 +193,6 @@ body {
   width: 100%;
   height: 15rem;
   background-color: #000000;
-}
-
-.nav-list {
-  position: relative;
-  right: -20%;
-}
-.nav-list .nav__item {
-  display: inline-block;
-  color: #ffffff;
-  list-style: none;
-  padding-left: 30px;
-  font-family: "Poiret One", cursive;
-}
-.nav-list .nav__item .activeStyling {
-  color: #a2a2a2;
-  text-decoration: underline;
-}
-.nav-list .nav__item > a {
-  color: #ffffff;
-  text-decoration: none;
 }
 
 /*# sourceMappingURL=index.css.map */
