--- a/client/src/index.css
+++ b/client/src/index.css
@@ -184,10 +184,17 @@ body {
   }
 }
 
+.form-banner-extended, .signup-banner, .signup-form {
+  vertical-align: bottom;
+}
+
 .signup-form {
+  display: inline-block;
   width: 18.25rem;
   height: 100vh;
-  background-color: yellow;
+}
+.signup-form input[type=text] {
+  margin-top: 30%;
 }
 .signup-form input[type=text],
 .signup-form input[type=email],
@@ -196,7 +203,7 @@ body {
   border-right: none;
   border-top: none;
   margin-left: 20%;
-  margin-bottom: 0.13rem;
+  margin-bottom: 0.23rem;
 }
 .signup-form .signup__btn {
   background-color: #000000;
@@ -204,7 +211,18 @@ body {
   width: 9.28rem;
   height: 20px;
   border-radius: 6px;
+  margin-top: 10%;
   margin-left: 20%;
+}
+
+.signup-banner {
+  display: inline-block;
+  width: calc(100% - 18.25rem);
+  height: 100vh;
+}
+.signup-banner .signup__banner__img {
+  height: 100vh;
+  width: 100%;
 }
 
 .footer {
