--- a/client/src/sass/layout/_Signup.scss
+++ b/client/src/sass/layout/_Signup.scss
@@ -1,10 +1,18 @@
 @use'../abstracts/mixins';
 
 
-.signup-form{
-  @include mixins.size(18.25rem, 100vh);
-  background-color: yellow;    
+.form-banner-extended{
+    vertical-align: bottom;
+ }
 
+.signup-form{
+  display:inline-block;
+  @include mixins.size(18.25rem, 100vh);
+  @extend .form-banner-extended;
+
+  input[type='text']{
+    margin-top: 30%;
+  }
   input[type='text'],
   input[type='email'],
   input[type='password']{
@@ -15,7 +23,7 @@
     }
     margin: {
         left:20%;
-        bottom:.13rem;
+        bottom:.23rem;
     }
   }
 
@@ -24,6 +32,20 @@
     color:#ffffff;
     @include mixins.size(9.28rem,20px);
     border-radius: 6px;
+    margin-top:10%;
     margin-left:20%;
+  }
+}
+
+
+.signup-banner{
+  display: inline-block;
+  @extend .form-banner-extended;
+  width: calc(100% - 18.25rem);
+  height:100vh;
+
+  .signup__banner__img{
+    height:100vh;
+    width: 100%;
   }
 }
