--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poiret+One&display=swap");
+@import url("https://unpkg.com/css.gg@2.0.0/icons/css/facebook.css");
 * {
   box-sizing: border-box;
 }
@@ -234,6 +235,35 @@ body {
   width: 100%;
   height: 15rem;
   background-color: #000000;
+}
+.footer .footer-menu {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.footer .footer-menu .footer__item {
+  list-style: none;
+  padding-bottom: 10px;
+  color: #ffffff;
+  font-family: "Poiret One", cursive;
+}
+@media (max-width: 25rem) {
+  .footer .footer-menu {
+    flex-direction: column;
+  }
+}
+@media (min-width: 25rem) {
+  .footer .line-break {
+    display: none;
+  }
+}
+
+@media (max-width: 25rem) {
+  .footer {
+    height: 550px;
+    font-size: 20px;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
