--- a/client/src/sass/base/_typeography.scss
+++ b/client/src/sass/base/_typeography.scss
@@ -1,2 +1,3 @@
 @import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
+@import url('https://unpkg.com/css.gg@2.0.0/icons/css/facebook.css');
