--- a/client/src/sass/layout/_Footer.scss
+++ b/client/src/sass/layout/_Footer.scss
@@ -7,4 +7,39 @@
     @include mixins.footer-position(static,0%,0%);
     @include mixins.size(100%, 15rem);
     background-color: variables.$footer;
+
+    .footer-menu{
+        display: flex;
+        width:100%;
+        flex-direction: row;
+        justify-content: space-around;
+
+        .footer__item{
+            list-style: none;
+            padding-bottom:10px;
+            color:#ffffff;
+            font-family: variables.$def-font;
+        }
+
+    }
+
+    @media(max-width:25rem){
+        .footer-menu{
+          flex-direction: column;
+        }
+        
+    }
+
+    @media(min-width:25rem){
+        .line-break{
+            display:none;
+        }
+    }
+}
+
+@media(max-width:25rem){
+    .footer{
+        height:550px;
+        font-size: 20px;
+    }
 }
