--- a/client/src/index.css
+++ b/client/src/index.css
@@ -66,6 +66,21 @@ body {
   width: 15.25rem;
   height: 16rem;
   background-color: red;
+  color: aqua;
+}
+
+.art-container:last-child {
+  margin-bottom: 40px;
+}
+
+figure {
+  margin: 0;
+  text-align: center;
+}
+
+.art__img {
+  width: 15.25rem;
+  height: 16rem;
 }
 
 .sectional {
@@ -113,6 +128,11 @@ body {
   .featured-container .featured__img {
     width: 100%;
     height: 15.5rem;
+  }
+}
+@media (max-width: 25rem) {
+  .featured-container .featured__img {
+    width: 100vw;
   }
 }
 
