made footer shorter

--- a/client/src/sass/layout/_home.scss
+++ b/client/src/sass/layout/_home.scss
@@ -1,4 +1,14 @@
-// .home-banner{
-//   background-image: url('https://i.imgur.com/MLZiFDt.jpg');
-  
-// }
+
+.home-banner{
+    z-index: -10;
+
+}
+
+
+.title{
+    display: inline-block;
+    position: relative;
+    top:-200px;
+    color: blue;
+    z-index:10;
+}
