--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -10,6 +10,7 @@
 @use'layout/Header';
 @use'layout/Nav';
 @use'layout/Banner';
+@use'layout/home';
 @use'layout/Art';
 @use'layout/sectional';
 @use'layout/featured';
