--- a/client/src/index.css
+++ b/client/src/index.css
@@ -55,6 +55,18 @@ body {
   height: 100%;
 }
 
+.home-banner {
+  z-index: -10;
+}
+
+.title {
+  display: inline-block;
+  position: relative;
+  top: -200px;
+  color: blue;
+  z-index: 10;
+}
+
 .art-container {
   display: flex;
   flex-direction: row;
@@ -253,7 +265,7 @@ figure {
   bottom: 0%;
   left: 0%;
   width: 100%;
-  height: 15rem;
+  height: 9rem;
   background-color: #000000;
 }
 .footer .footer-menu {
